<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">下班倒计时</string>
    <string name="onWorkTimeStart">08:30</string>
    <string name="onWorkTimeEnd">09:30</string>
    <string name="offWorkTimeStart">17:45</string>
    <string name="offWorkTimeEnd">18:45</string>
    <string name="noonRestTimeStart">12:15</string>
    <string name="noonRestTimeEnd">13:30</string>
    <string name="onWorkTips">上班弹性时间</string>
    <string name="offWorkTips">下班弹性时间</string>
    <string name="noonRestTips">午休时间</string>
    <string name="offWorkLeft">距下班还有：</string>
    <string name="signInTime">打卡时间：</string>
    <string name="offWorkTime">下班时间：</string>
    <string name="notSignIn">您今天还没有记录打卡</string>
    <string name="goHome">已到下班时间，回家，回家~</string>
    <string name="goHomeTitle">下班喽</string>
    <string name="seqrator">~</string>
    <string name="modify">修改打卡时间</string>
    <string name="manual">手动设置打卡时间</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="aboutDetail">该软件是免费自由软件，秉承以下观点：一、没有广告；二、不偷流量；三、不搞小动作；专心只做自己的事情。</string>
    <string name="aboutDetail2">因为没有申请网络权限，请自行前往<a href="http://www.wandoujia.com/apps/com.nferzhuang.offwork">豌豆荚应用页面</a>查询最新版本。</string>
    <string name="signIn">打卡</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="errtitle">出错了！</string>
    <string name="onwork_range_error">上班弹性时间段设置错误</string>
    <string name="onwork_time_error">午休时间和上班弹性时间段重叠</string>
    <string name="noonrest_range_error">午休时间段设置错误</string>
    <string name="noonrest_time_error">午休时间和下班弹性时间段重叠</string>
    <string name="offwork_range_error">下班弹性时间段设置错误</string>
    <string name="on_off_range_diff_error">上下班弹性时间段不相等</string>
    <string name="duration_error">上班时间不足8小时</string>
    <string name="not_flexible_error">上下班不是弹性考勤，请不要使用该软件</string>
    <string name="author">作者：Nfer</string>
    <string name="QQ">QQ：3311259997</string>
    <string name="version">版本：</string>
    <string name="actionBarLeftBtn">标题栏左侧按钮</string>
    <string name="actionBarRightBtn">标题栏右侧按钮</string>
    <string name="no_setting">请先设置考勤时间再记录打卡</string>
    <string name="setting_no_save">请先保存再退出</string>
    <string name="late">打卡时间已迟到，是否手动输入时间？</string>

</resources>