<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_settings"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/onWorkTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="150dp"
        android:text="@string/onWorkTips"
        android:textColor="@drawable/black"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="50dp"
        android:paddingLeft="0dp"
        android:paddingRight="50dp"
        android:paddingStart="0dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/onWorkStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onWorkTimeStart"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/seqrator"
            android:textColor="@drawable/red"
            android:textSize="16sp" >
        </TextView>

        <Button
            android:id="@+id/onWorkEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onWorkTimeEnd"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/noonRestTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/noonRestTips"
        android:textColor="@drawable/black"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="50dp"
        android:paddingLeft="0dp"
        android:paddingRight="50dp"
        android:paddingStart="0dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/noonRestStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noonRestTimeStart"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/seqrator"
            android:textColor="@drawable/red"
            android:textSize="16sp" >
        </TextView>

        <Button
            android:id="@+id/noonRestEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noonRestTimeEnd"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/offWorkTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/offWorkTips"
        android:textColor="@drawable/black"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="50dp"
        android:paddingLeft="0dp"
        android:paddingRight="50dp"
        android:paddingStart="0dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/offWorkStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offWorkTimeStart"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/seqrator"
            android:textColor="@drawable/red"
            android:textSize="16sp" >
        </TextView>

        <Button
            android:id="@+id/offWorkEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offWorkTimeEnd"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

</LinearLayout>