<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_offwork"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/offWorkLeftLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="150dp" >

        <TextView
            android:id="@+id/signInTimeTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSignIn"
            android:textColor="@drawable/white"
            android:textSize="16sp" >
        </TextView>

        <TextView
            android:id="@+id/offWorkTimeTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSignIn"
            android:textColor="@drawable/white"
            android:textSize="16sp" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/offWorkLeftTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notSignIn"
                android:textColor="@drawable/white"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/offWorkLeftValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onWorkTimeStart"
                android:textColor="@drawable/white"
                android:textSize="36sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="150dp" >

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textColor="@drawable/black"
            android:textSize="18sp" >
        </Button>

        <TextView
            android:id="@+id/signInManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/manual"
            android:textColor="@drawable/alphawhite"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>